--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "eleventy --serve",
-        "build": "eleventy"
+        "start": "npx eleventy --serve",
+        "build": "npx eleventy"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@11ty/eleventy": "^2.0.1"
+    },
+    "dependencies": {
+        "eleventy": "^1.0.6"
     }
 }
