--- a/.github/workflows/11ty_build_deploy.yml
+++ b/.github/workflows/11ty_build_deploy.yml
@@ -37,7 +37,7 @@ jobs:
               run: rm -rf *
 
             - name: Copy built files
-              run: cp -r ./_site/* .
+              run: cp -r ../_site/* .
 
             - name: Commit changes
               run: |
