--- a/.github/workflows/11ty_build_deploy.yml
+++ b/.github/workflows/11ty_build_deploy.yml
@@ -1,48 +1,70 @@
-name: Eleventy Build + Deploy
+# name: Eleventy Build + Deploy
+
+# on:
+#     push:
+#         branches:
+#             - main
+
+# jobs:
+#     build:
+#         runs-on: ubuntu-latest
+
+#         steps:
+#             - name: Checkout repository
+#               uses: actions/checkout@v2
+
+#             - name: Setup Node.js
+#               uses: actions/setup-node@v3
+#               with:
+#                   node-version: "14"
+
+#             - name: Install dependencies
+#               run: npm install
+
+#             - name: Build Eleventy site
+#               run: npm run build # package.json build command
+
+#     deploy:
+#         runs-on: ubuntu-latest
+#         needs: build
+#         steps:
+#             - name: Checkout deployment repository
+#               uses: actions/checkout@v2
+#               with:
+#                   repository: col-lefevre/col-lefevre.github.io # GitHub Pages repo
+
+#             - name: Remove existing files
+#               run: rm -rf *
+
+#             - name: Copy built files
+#               run: cp -r ./_site .
+
+#             - name: Commit changes
+#               run: |
+#                   git config user.name "${{ github.actor }}"
+#                   git config user.email "${{ github.actor }}@users.noreply.github.com"
+#                   git add -A
+#                   git commit -m "Deploy Eleventy site - ${{ github.sha }}"
+#                   git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/col-lefevre/col-lefevre.github.io.git HEAD:main
+
+name: Eleventy Build
 
 on:
     push:
         branches:
-            - main
+            - master
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v2
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v3
-              with:
-                  node-version: "14"
-
-            - name: Install dependencies
-              run: npm install
-
-            - name: Build Eleventy site
-              run: npm run build # package.json build command
-
     deploy:
         runs-on: ubuntu-latest
-        needs: build
         steps:
-            - name: Checkout deployment repository
-              uses: actions/checkout@v2
+            - uses: actions/checkout@v2
+
+            - name: Setup Node
+              uses: actions/setup-node@v1
               with:
-                  repository: col-lefevre/col-lefevre.github.io # GitHub Pages repo
+                  node-version: "10.x"
 
-            - name: Remove existing files
-              run: rm -rf *
+            - run: npm ci
 
-            - name: Copy built files
-              run: cp -r ../_site/* .
-
-            - name: Commit changes
-              run: |
-                  git config user.name "${{ github.actor }}"
-                  git config user.email "${{ github.actor }}@users.noreply.github.com"
-                  git add -A
-                  git commit -m "Deploy Eleventy site - ${{ github.sha }}"
-                  git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/col-lefevre/col-lefevre.github.io.git HEAD:main
+            - run: npm run build
