--- a/.github/workflows/11ty_build_deploy.yml
+++ b/.github/workflows/11ty_build_deploy.yml
@@ -1,49 +1,67 @@
-name: Eleventy Build + Deploy
-
+name: Eleventy Build
 on:
     push:
         branches:
             - main
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-
+    build_deploy:
+        runs-on: ubuntu-18.04
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v2
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v3
+            - uses: actions/checkout@master
+            - name: Build
+              uses: TartanLlama/actions-eleventy@master
+            - name: Deploy
+              uses: peaceiris/actions-gh-pages@v3
               with:
-                  node-version: "14"
+                  publish_dir: _site
+                  publish_branch: gh-pages
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+# name: Eleventy Build + Deploy
 
-            - name: Install dependencies
-              run: npm install
+# on:
+#     push:
+#         branches:
+#             - main
 
-            - name: Build Eleventy site
-              run: npm run build # package.json build command
+# jobs:
+#     build:
+#         runs-on: ubuntu-latest
 
+#         steps:
+#             - name: Checkout repository
+#               uses: actions/checkout@v2
 
-    # deploy:
-    #     runs-on: ubuntu-latest
-    #     needs: build
-    #     steps:
-    #         - name: Checkout deployment repository
-    #           uses: actions/checkout@v2
-    #           with:
-    #               repository: col-lefevre/col-lefevre.github.io # GitHub Pages repo
+#             - name: Setup Node.js
+#               uses: actions/setup-node@v3
+#               with:
+#                   node-version: "14"
 
-    #         - name: Remove existing files
-    #           run: rm -rf *
+#             - name: Install dependencies
+#               run: npm install
 
-    #         - name: Copy built files
-    #           run: cp -r ./_site .
+#             - name: Build Eleventy site
+#               run: npm run build # package.json build command
 
-    #         - name: Commit changes
-    #           run: |
-    #               git config user.name "${{ github.actor }}"
-    #               git config user.email "${{ github.actor }}@users.noreply.github.com"
-    #               git add -A
-    #               git commit -m "Deploy Eleventy site - ${{ github.sha }}"
-    #               git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/col-lefevre/col-lefevre.github.io.git HEAD:main
+# deploy:
+#     runs-on: ubuntu-latest
+#     needs: build
+#     steps:
+#         - name: Checkout deployment repository
+#           uses: actions/checkout@v2
+#           with:
+#               repository: col-lefevre/col-lefevre.github.io # GitHub Pages repo
+
+#         - name: Remove existing files
+#           run: rm -rf *
+
+#         - name: Copy built files
+#           run: cp -r ./_site .
+
+#         - name: Commit changes
+#           run: |
+#               git config user.name "${{ github.actor }}"
+#               git config user.email "${{ github.actor }}@users.noreply.github.com"
+#               git add -A
+#               git commit -m "Deploy Eleventy site - ${{ github.sha }}"
+#               git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/col-lefevre/col-lefevre.github.io.git HEAD:main
