--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "@11ty/eleventy": "^2.0.1"
     },
     "dependencies": {
-        "eleventy": "^1.0.6"
+        "clean-css": "^5.3.3",
+        "eleventy": "^1.0.6",
+        "html-minifier": "^4.0.0",
+        "terser": "^5.28.1"
     }
 }
