--- a/.github/workflows/11ty_build_deploy.yml
+++ b/.github/workflows/11ty_build_deploy.yml
@@ -1,32 +1,54 @@
-name: Eleventy Build
-on:
+# name: Eleventy Build
+# on:
+#     push:
+#         branches:
+#             - main
+
+# jobs:
+#     build_deploy:
+#         runs-on: ubuntu-latest
+#         steps:
+#             - uses: actions/checkout@master
+#             - name: Build
+#               uses: TartanLlama/actions-eleventy@master
+
+#             # - name: Deploy (Internal Branch)
+#             #   uses: peaceiris/actions-gh-pages@v3
+#             #   with:
+#             #       publish_dir: _site
+#             #       publish_branch: gh-pages
+#             #       github_token: ${{ secrets.REPO_ACCESS_TOKEN }}
+
+#             - name: Deploy (External Repo)
+#               uses: cpina/github-action-push-to-another-repository@main
+#               env:
+#                   API_TOKEN_GITHUB: ${{ secrets.REPO_ACCESS_TOKEN }}
+#               with:
+#                   source-directory: "_site"
+#                   destination-github-username: "col-lefevre"
+#                   destination-repository-name: "col-lefevre.github.io"
+#                   user-email: colin.lefevre.school@gmail.com
+#                   target-branch: main
+#                   install_dependencies: true
+
+name:  Eleventy Build
     push:
         branches:
             - main
 
 jobs:
-    build_deploy:
+    test:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@master
-            - name: Build
-              uses: TartanLlama/actions-eleventy@master
-
-            # - name: Deploy (Internal Branch)
-            #   uses: peaceiris/actions-gh-pages@v3
-            #   with:
-            #       publish_dir: _site
-            #       publish_branch: gh-pages
-            #       github_token: ${{ secrets.REPO_ACCESS_TOKEN }}
-
-            - name: Deploy (External Repo)
-              uses: cpina/github-action-push-to-another-repository@main
-              env:
-                  API_TOKEN_GITHUB: ${{ secrets.REPO_ACCESS_TOKEN }}
+            - name: Build 11ty
+              uses: cagov/actions-eleventy@3.1
               with:
-                  source-directory: "_site"
-                  destination-github-username: "col-lefevre"
-                  destination-repository-name: "col-lefevre.github.io"
-                  user-email: colin.lefevre.school@gmail.com
-                  target-branch: main
-                  install_dependencies: true
+                  build_task: build:staging
+                  build_eleventy_args: --formats=html,njk --input ./pages --output ./docs
+            - name: Deploy
+              uses: peaceiris/actions-gh-pages@v1.1.0
+              env:
+                  PUBLISH_DIR: _site
+                  PUBLISH_BRANCH: gh-pages
+                  GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
