--- a/.github/workflows/11ty_build_deploy.yml
+++ b/.github/workflows/11ty_build_deploy.yml
@@ -31,10 +31,8 @@
 #                   target-branch: main
 #                   install_dependencies: true
 
-name:  Eleventy Build
-    push:
-        branches:
-            - main
+name: Test Build
+on: [push]
 
 jobs:
     test:
